--- a/Html/Accueil2.html
+++ b/Html/Accueil2.html
@@ -5,19 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accueil</title>
-    <link rel="stylesheet" href="../Css/Accueil2.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link
-        href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Round|Material+Icons+Sharp|Material+Icons+Two+Tone"
-        rel="stylesheet" />
+    <link rel="stylesheet" href="../Css/Accueil.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;300;400;500;600;700;800&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
-        rel="stylesheet" />
 </head>
 
 <body>
@@ -159,7 +150,6 @@
                                     accusamus velit, ipsa provident.
                                     <div class="desc">2m ago <span>Reply</span></div>
                                 </span>
-                                <!-- <i class="fa-regular fa-heart"></i> -->
                             </div>
                             <div class="comment">
                                 <img src="../images/pdp.jpg" alt="" />
@@ -167,7 +157,6 @@
                                     Explicabo nesciunt consectetur quos laudantium.
                                     <div class="desc">1h ago <span>Reply</span></div>
                                 </span>
-                                <!-- <i class="fa-regular fa-heart"></i> -->
                             </div>
                             <div class="comment">
                                 <img src="../images/pdp.jpg" alt="" />
@@ -175,16 +164,13 @@
                                     iusto.
                                     <div class="desc">1d ago <span>Reply</span></div>
                                 </span>
-                                <!-- <i class="fa-regular fa-heart"></i> -->
                             </div>
-
                             <div class="comment">
                                 <img src="../images/pdp.jpg" alt="" />
                                 <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                                     Explicabo nesciunt consectetur.
                                     <div class="desc">1h ago <span>Reply</span></div>
                                 </span>
-                                <!-- <i class="fa-regular fa-heart"></i> -->
                             </div>
                             <div class="comment">
                                 <img src="../images/pdp.jpg" alt="" />
@@ -192,7 +178,6 @@
 
                                     <div class="desc">1h ago <span>Reply</span></div>
                                 </span>
-                                <!-- <i class="fa-regular fa-heart"></i> -->
                             </div>
                         </div>
 
@@ -201,7 +186,6 @@
                             <input type="text" placeholder="Add a comment..." />
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
